@@ -1439,14 +1439,17 @@ If you have this image in full resolution upload this one, otherwise change the 
 'imgdelete'                 => 'del',
 'imgdesc'                   => 'desc',
 'imgfile'                   => 'file',
-'imglegend'                 => 'Legend: (desc) = show/edit file description.',
-'imghistory'                => 'File history',
-'revertimg'                 => 'rev',
-'deleteimg'                 => 'del',
-'deleteimgcompletely'       => 'Delete all revisions of this file',
-'imghistlegend'             => 'Legend: (cur) = this is the current file, (del) = delete
-this old version, (rev) = revert to this old version.
-<br /><i>Click on date to see the file uploaded on that date</i>.',
+'filehist' => 'File history',
+'filehist-help' => 'Click on a date/time to view the file as it appeared at that time.',
+'filehist-deleteall' => 'delete all',
+'filehist-deleteone' => 'delete this',
+'filehist-revert' => 'revert',
+'filehist-current' => 'current',
+'filehist-datetime' => 'Date/Time',
+'filehist-user' => 'User',
+'filehist-dimensions' => 'Dimensions',
+'filehist-filesize' => 'File size',
+'filehist-comment' => 'Comment',
 'imagelinks'                => 'Links',
 'linkstoimage'              => 'The following pages link to this file:',
 'nolinkstoimage'            => 'There are no pages that link to this file.',
