@@ -27,3 +27,14 @@ div#mw-js-message {
 	float: right;
 	margin-left: 5px;
 }
+
+/**
+ * File histories
+ */
+table.filehistory th,
+table.filehistory td {
+	padding: 0 0.15em 0 0.15em;
+}
+table.filehistory th {
+	text-align: left;
+}
